feat: support notifications
